--- a/form/main.html
+++ b/form/main.html
@@ -18,7 +18,7 @@
         <main>%TEXT%</main>
         %INCLUDES%
         <footer>
-            %TIME% · %DATE% · <a href="https://help.twitter.com/using-twitter/how-to-tweet#source-labels" target="_blank">%SOURCE%</a>
+            <b>%RETWEETS%</b> Retweets · <b>%LIKES%</b> Likes · %TIME% · %DATE% · <a href="https://help.twitter.com/using-twitter/how-to-tweet#source-labels" target="_blank">%SOURCE%</a>
         </footer>
     </div>
 </article>
