spacing issues fix

--- a/form/main.html
+++ b/form/main.html
@@ -15,7 +15,7 @@
                 </div>
             </a>
         </header>
-        <main>%TEXT%</main>
+        <div class="body">%TEXT%</div>
         %INCLUDES%
         <footer>
             <b>%RETWEETS%</b> Retweets · <b>%LIKES%</b> Likes · %TIME% · %DATE% · <a href="https://help.twitter.com/using-twitter/how-to-tweet#source-labels" target="_blank">%SOURCE%</a>
