--- a/form/main.html
+++ b/form/main.html
@@ -9,6 +9,7 @@
                     <div>
                         <div>
                             <div class="name">%NAME%</div>%VERIFIED%
+                            <div class="logo"><img src="../images/twitter.png" height="22" width="40"/></div>
                         </div>
                         <div class="username">%USER_NAME%</div>
                     </div>
