styling fixes set 4

--- a/form/main.html
+++ b/form/main.html
@@ -9,7 +9,7 @@
                     <div>
                         <div>
                             <div class="name">%NAME%</div>%VERIFIED%
-                            <div class="logo"><img src="../images/twitter.png" height="22" width="40"/></div>
+                            <div class="logo"><img src="https://letterdrop.com/resources/images/twitter.svg" height="20" width="20" /></div>
                         </div>
                         <div class="username">%USER_NAME%</div>
                     </div>
