--- a/form/verified.html
+++ b/form/verified.html
@@ -1,1 +1,1 @@
-<div class="verified"><img src= "../images/verified-badge.png" width="18" height="18" style="margin-left:5px;"/></div>
+<div class="verified"><img src= "https://letterdrop.com/resources/images/verified-badge.svg" width="18" height="18" style="margin-left:5px;"/></div>
