--- a/form/main.html
+++ b/form/main.html
@@ -9,11 +9,11 @@
                     <div>
                         <div>
                             <div class="name">%NAME%</div>%VERIFIED%
-                            <div class="logo"><img src="https://letterdrop.com/resources/images/twitter.svg" height="20" width="20" /></div>
                         </div>
                         <div class="username">%USER_NAME%</div>
                     </div>
                 </div>
+                <div class="logo"><img src="https://firebasestorage.googleapis.com/v0/b/zmtvapp.appspot.com/o/images%2Ftwitter%2Ftwitter.svg?alt=media" height="15" width="20" /></div>
             </a>
         </header>
         <div class="body">%TEXT%</div>
