--- a/form/main.html
+++ b/form/main.html
@@ -8,13 +8,12 @@
                 <div class="profile">
                     <div>
                         <div>
-                            <div class="name">%NAME%</div>
-                            <!-- %VERIFIED% -->
+                            <div class="name">%NAME%</div>%VERIFIED%
                         </div>
                         <div class="username">%USER_NAME%</div>
                     </div>
                 </div>
-                <!-- <div class="logo"><img src="https://firebasestorage.googleapis.com/v0/b/zmtvapp.appspot.com/o/images%2Ftwitter%2Ftwitter.svg?alt=media" height="15" width="20" /></div> -->
+                <div class="logo"><img src="https://firebasestorage.googleapis.com/v0/b/zmtvapp.appspot.com/o/images%2Ftwitter%2Ftwitter.png?alt=media" height="15" width="30" /></div>
             </a>
         </header>
         <div class="body">%TEXT%</div>
