--- a/form/main.html
+++ b/form/main.html
@@ -1,25 +1,31 @@
 <article class="main">
-    <div>
-        <header>
-            <a href="%AUTHOR_LINK%" target="_blank">
-                <div class="profile_image">
-                    <img src="%PROFILE_IMAGE%" />
-                </div>
-                <div class="profile">
-                    <div>
-                        <div>
-                            <div class="name">%NAME%</div>%VERIFIED%
-                        </div>
-                        <div class="username">%USER_NAME%</div>
+    <a href="%TWEET_URL%" target="_blank">
+        <div>
+            <header>
+                <a href="%AUTHOR_LINK%" target="_blank">
+                    <div class="profile_image">
+                        <img src="%PROFILE_IMAGE%" />
                     </div>
-                </div>
-                <div class="logo"><img src="https://firebasestorage.googleapis.com/v0/b/zmtvapp.appspot.com/o/images%2Ftwitter%2Ftwitter.png?alt=media" height="15" width="30" /></div>
-            </a>
-        </header>
-        <div class="body">%TEXT%</div>
-        %INCLUDES%
-        <footer>
-            <b>%RETWEETS%</b> Retweets · <b>%LIKES%</b> Likes · %TIME% · %DATE% · <a href="https://help.twitter.com/using-twitter/how-to-tweet#source-labels" target="_blank">%SOURCE%</a>
-        </footer>
-    </div>
+                    <div class="profile">
+                        <div>
+                            <div>
+                                <div class="name">%NAME%</div>%VERIFIED%
+                            </div>
+                            <div class="username">%USER_NAME%</div>
+                        </div>
+                    </div>
+                    <div class="logo"><img
+                            src="https://firebasestorage.googleapis.com/v0/b/zmtvapp.appspot.com/o/images%2Ftwitter%2Ftwitter.png?alt=media"
+                            height="15" width="30" /></div>
+                </a>
+            </header>
+            <div class="body">%TEXT%</div>
+            %INCLUDES%
+            <footer>
+                <b>%RETWEETS%</b> Retweets · <b>%LIKES%</b> Likes · %TIME% · %DATE% · <a
+                    href="https://help.twitter.com/using-twitter/how-to-tweet#source-labels"
+                    target="_blank">%SOURCE%</a>
+            </footer>
+        </div>
+    </a>
 </article>
